--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -90,6 +90,10 @@ p{word-wrap:break-word}
 .el-table{
     font-size: 14px;
 }
+
+.textarea textarea{
+  height: 100px;
+}
 /* .el-form-item__label{
     font-size: 12px;
 } */
